--- a/company-detail.html
+++ b/company-detail.html
@@ -177,6 +177,8 @@
     </style>
 </head>
 <body>
+
+
     <header>
         <h1>China & Africa.com</h1>
         <div class="user-info">Hi, Jack</div>
@@ -282,9 +284,11 @@
                     <div id="rightSide">
                         <div id="leftRightContainer">
                             <div id="leftSide">
-                                Name 
+                                <b>Axxxxxxm</b> 
                                 <br>
-                                Date
+                                27 Nov 2024 01:01
+                                <br>
+                                1 Star
                             </div>
                             <div id="rightSide">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam quis, maiores expedita quae natus rerum ut quos. Saepe quia minima itaque modi ab inventore rerum quis unde ratione voluptatum? Fugit?
@@ -295,9 +299,11 @@
                         <hr>
                         <div id="leftRightContainer">
                             <div id="leftSide">
-                                Name 
+                                <b>Dxxxxxxb</b> 
                                 <br>
-                                Date
+                                22 Nov 2024 05:31
+                                <br>
+                                4 Star
                             </div>
                             <div id="rightSide">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam quis, maiores expedita quae natus rerum ut quos. Saepe quia minima itaque modi ab inventore rerum quis unde ratione voluptatum? Fugit?
@@ -308,9 +314,11 @@
                         <hr>
                         <div id="leftRightContainer">
                             <div id="leftSide">
-                                Name 
+                                <b>Bxxxxxxb</b> 
                                 <br>
-                                Date
+                                21 Nov 2024 05:31
+                                <br>
+                                5 Star
                             </div>
                             <div id="rightSide">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam quis, maiores expedita quae natus rerum ut quos. Saepe quia minima itaque modi ab inventore rerum quis unde ratione voluptatum? Fugit?
